初步完成user页面

--- a/app.json
+++ b/app.json
@@ -6,7 +6,8 @@
     "pages/register/index",
     "pages/detail/index",
     "pages/edit/index",
-    "pages/createBlog/index"
+    "pages/createBlog/index",
+    "pages/userBlogs/userBlogs"
   ],
   "window": {
     "backgroundTextStyle": "light",
